# family-tree-cpp-class

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.bat  export.sh  pch.cpp  pch.hpp  run  run.sh
compile/: 01_check_running.bat  02_check_dependencies.bat  03_detect_changes.bat  04_compile_files.bat  05_run_program.bat  functions.bat
dados/: dados.csv
data/: armazenamento.json
doc/: STUDY.md  export  export.sh
include/: estruturas.hpp  includes.hpp  main.hpp  menu_criar.hpp  menu_exibir.hpp  menu_funcoes.hpp  menu_import_export.hpp  menu_principal.hpp  processo.hpp
include/core/: arvore.hpp  estruturas.hpp  execucao.hpp  main.hpp  operacoes.hpp  persistencia.hpp  pessoa.hpp
include/io/: csv_handler.hpp  utf8_config.hpp
include/pch/: pch.cpp  pch.hpp
include/ui/: impressao.hpp  menu.hpp
include/utils/: busca.hpp  validacao.hpp
src/: csv_reader.cpp  csv_reader.h  execucao.cpp  familia.cpp  familia.h  interface.cpp  main.cpp  main.hpp  menu_criar.cpp  menu_exibir.cpp  menu_funcoes.cpp  menu_import_export.cpp  menu_principal.cpp  operacoes.cpp  persistencia.cpp  pessoa.cpp  pessoa.h  processo.cpp
src/core/: arvore.cpp
src/io/: csv_handler.cpp  utf8_config.cpp
src/ui/: impressao.cpp  menu.cpp
src/utils/: busca.cpp  validacao.cpp
